Criado Nav-Tabs + Botao de redirecionamento para WhatsApp

--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -23,4 +23,8 @@
     </div>
     <div class="main">
     </div>
+    <app-navigation-tabs></app-navigation-tabs>
+    <app-basicelements></app-basicelements>
+    <app-navigation></app-navigation>
+    <app-navigation></app-navigation>
 </div>
